@@ -9,3 +9,4 @@
 ;table=cdr		;"cdr" is default table name
 ;usegmtime=no             ; set to "yes" to log in GMT
 ;hrtime=yes		;Enables microsecond accuracy with the billsec and duration fields
+;newcdrcolumns=yes ; Enable log new cdr columns (peeraccount, linkedid, sequence)
